Terminado el header, tambien agregue las respectivas carpetas para organizar sass

--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CDA Oficial</title>
-    <link rel="icon" href="./img/icon-cda.ico">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="img/icon-cda.ico">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+    <div class="promo-socios">
+        <p>¡Hacete socio del CDA! ¡Durante Septiembre, 50% OFF sacando tu carnet de socio!</p>
+    </div>target="_blank" "
     <header>
+        <a href="https://www.instagram.com/elcdaoficial/" target="_blank">
+            <img src="img/logo-cda.PNG" alt="logo CDA">
+        </a>
+        <h1>CDA | Sitio Oficial</h1>
         <nav>
             <ul>
-                <li><a href="">INICIO</a></li>
-                <li><a href="">FUTBOL</a></li>
-                <li><a href="">PLANTEL</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="/html/futbol.html" target="_blank">FUTBOL</a></li>
+                <li><a href="/html/plantel.html" target="_blank">PLANTEL</a></li>
+                <li><a href="/html/socios.html" target="_blank">SOCIOS</a></li>
             </ul>
         </nav>
     </header>
