--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
