--- a/index.html
+++ b/index.html
@@ -76,7 +76,31 @@
     </main>
 
     <footer>
-        
+        <div class="grupo-1">
+            <div class="box">
+                <figure>
+                    <a href="#">
+                        <img src="img/logo-cda.PNG" alt="logo cda">
+                    </a>
+                </figure>
+            </div>
+            <div class="box">
+                <h3>Sobre Nosotros</h3>
+                <p>Estamos ubicados en</p>
+                <p>Tucumán, Argentina.</p>
+            </div>
+            <div class="box">
+                <h3>Redes Sociales</h3>
+                <div class="redes">
+                    <a href="https://www.instagram.com/elcdaoficial/" target="_blank" class="instagram"><img src="img/insta.png" alt="insta"></a>
+                    <a href="https://www.tiktok.com/@elcdaoficial" target="_blank" class="tiktok"><img src="img/tiktok.png" alt="tiktok"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="grupo-2">
+            <small>&copy; 2023 <b>Lucas Peralta</b> - Todos los Derechos Reservados</small>
+        </div>
     </footer>
     
 </body>
