Listo para empezar la seccion Futbol

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CDA Oficial</title>
+    <title>CDA - Sitio Oficial</title>
     <link rel="icon" href="img/icon-cda.ico">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -15,7 +15,7 @@
 
     <header>
         
-            <a href="https://www.instagram.com/elcdaoficial/" class="logo" target="_blank">
+            <a href="index.html" class="logo">
                 <img src="img/logo-cda.PNG" alt="logo CDA">
                 <h2>CDA | Sitio Oficial</h2>   
             </a>
