futbol y scss terminado

--- a/html/futbol.html
+++ b/html/futbol.html
@@ -6,6 +6,7 @@
     <title>Futbol</title>
     <link rel="icon" href="/img/icon-cda.ico">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -32,8 +33,63 @@
     </header>
 
     <main>
-        <section class="container">
+        <section class="container-futbol">
 
+            <div class="noticia" data-aos="fade-right">
+
+                <h2>Futbol - Primera Division</h2>
+
+                <p>El equipo ya se encuentra concentrando<br>
+                30 horas antes de su proximo encuentro.<br>
+                ¡El CDA debe ganar o ganar si planea<br>
+                clasificar a la copa de Plata!</p>
+
+                <img src="/img/noticia1.jpg" alt="foto noticia">
+
+            </div>
+
+            <div class="noticia" data-aos="fade-left">
+
+                <h2>Polideportivo - Futsal</h2>
+
+                <p>La comision directiva del CDA<br>
+                propone presentar un equipo para<br>
+                el próximo torneo la LTFS.</p>
+
+                <img src="/img/noticia2.jpg" alt="foto noticia">
+
+                <a href="https://www.instagram.com/direct/t/17843826707821720" target="_blank">Quiero formar parte ¡Hace click!</a>
+
+            </div>
+
+            <div class="noticia" data-aos="fade-right">
+
+                <h2>Extradeportivo - Sabado 08</h2>
+
+                <p>El pasado Sabado se juntó la comision<br>
+                directiva del club para charlar sobre<br>
+                posibles salidas y refuerzos de jugadores.<br>
+                La cantidad de fernet y asado fue<br>
+                proporcional a cantidad de goles que<br>
+                el equipo se come por partidos.</p>
+
+                <img src="/img/noticia3.jpeg" alt="foto noticia">
+
+            </div>
+
+            <div class="noticia" data-aos="fade-left">
+                
+                <h2>Portal de Socios</h2>
+
+                <p>Luego de la inmensa cantidad de socios <br>
+                que generó el club por la promocion de<br>
+                septiembre, el servidor cayó y los hinchas<br>
+                están disconformes con los programador<br>
+                que contrató el presidente Guzmán.</p>
+
+                <img src="/img/noticia4.jpeg" alt="foto noticia">
+
+            </div>
         </section>
     </main>
 
@@ -64,6 +120,10 @@
             <small>&copy; 2023 <b>Lucas Peralta</b> - Todos los Derechos Reservados</small>
         </div>
     </footer>
-    
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
