--- a/html/socios.html
+++ b/html/socios.html
@@ -34,7 +34,7 @@
 
     <main>
         <section class="container-socios">
-            <h6>PROXIMAMENTE...</h6>
+            <h6>-- EN MANTENIMIENTO --</h6>
         </section>
     </main>
 
